kubernetes-flux/hyper/envoy-gateway-system/internal/resources/gateway.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gateway_v1.json

apiVersion: "gateway.networking.k8s.io/v1"
kind: Gateway
metadata:
  name: internal
spec:
  gatewayClassName: default
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: "10.0.2.16"
    labels:
      kube.huggins.io/ip-pool: "hyper-applications"
  listeners:
    - name: insecure
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: default
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: hyperlab-internal-domain-tls
